--- a/index.html
+++ b/index.html
@@ -28,7 +28,37 @@
             <li>icon</li>
           </ul>
         </div>
+      </div>
+      <div id="page-container">
+        <div id="left-container">
+          <div id="info-box">
+            <div id="info-top">
+              <h2>Welcome..</h2>
+              <h3>
+                Warmth and comfort <br />
+                for
+                <span
+                  >your furry <br />
+                  friends</span
+                >
+              </h3>
+              <p>
+                Discover the perfect pet heating solutions to keep your beloved
+                <br />
+                companions cozy and content all year round.
+              </p>
+            </div>
+            <div id="btn-container">
+              <button>Our services ></button>
+              <a href="#">Schedule a call</a>
+            </div>
+          </div>
+          <div id="experts-container">
+            <h2>Our experts</h2>
+            <p>Choose the services they love or start shopping now</p>
+          </div>
         </div>
+        <div id="right-container">2</div>
       </div>
     </div>
   </body>
