--- a/index.html
+++ b/index.html
@@ -49,13 +49,27 @@
               </p>
             </div>
             <div id="btn-container">
-              <button>Our services ></button>
+              <button>
+                <h3>Our services</h3>
+                <img src="icons/arrow.svg" alt="arrow icon" />
+              </button>
               <a href="#">Schedule a call</a>
             </div>
           </div>
-          <div id="experts-container">
-            <h2>Our experts</h2>
-            <p>Choose the services they love or start shopping now</p>
+          <div id="experts-wrap-1">
+            <div id="rectangle-2"></div>
+            <div id="experts-wrap-2">
+              <div id="exp-t">
+                <div id="exp-t-a">
+                  <div id="exp-t-a-a"></div>
+                  <div id="exp-t-a-b"></div>
+                </div>
+                <div id="exp-t-b"><h3>Our Experts</h3></div>
+              </div>
+              <div id="exp-b">
+                <h3>Choose the services they love or start shopping now</h3>
+              </div>
+            </div>
           </div>
         </div>
         <div id="right-container">2</div>
