--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <div id="main-container">
       <div id="header-container">
         <div id="nav-left">
-          <h1>logo</h1>
+          <img src="logos/logo1.svg" alt="" />
           <h1>Petty</h1>
         </div>
-        <div id="nav-menu">
-          <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Training</a></li>
-            <li><a href="#">Shop</a></li>
-          </ul>
-        </div>
-        <div id="contacts-container">
-          <ul>
-            <li><a href="#">Contact us</a></li>
-            <li>icon</li>
-          </ul>
+        <div id="nav-wrap">
+          <div id="nav-wrap-left">
+            <h5><img src="logos/logo2.svg" alt="" /> <span>Home</span></h5>
+            <h5>About</h5>
+            <h5>Services</h5>
+            <h5>Training</h5>
+            <h5>Shop</h5>
+          </div>
+          <div id="nav-wrap-right">
+            <h5>Constact us</h5>
+            <div id="logo-3">
+              <img src="logos/logo3.svg" alt="" />
+            </div>
+          </div>
         </div>
       </div>
       <div id="page-container">
@@ -72,7 +72,11 @@
             </div>
           </div>
         </div>
-        <div id="right-container">2</div>
+        <div id="right-container">
+          <div id="right-wrap">
+            <div id="dog"></div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
