--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div id="main-container">
+      <div id="dogo1"></div>
+      <div id="dogo2"></div>
+      <div id="dogo3"></div>
+      <div id="dogo4"></div>
+      <div id="dogo5"></div>
       <div id="header-container">
         <div id="nav-left">
           <img src="logos/logo1.svg" alt="" />
