--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
       <div id="dogo3"></div>
       <div id="dogo4"></div>
       <div id="dogo5"></div>
+      <div id="ellipse1"></div>
+      <div id="ellipse2"></div>
+      <div id="ellipse3"></div>
+
       <div id="header-container">
         <div id="nav-left">
-          <img src="logos/logo1.svg" alt="" />
+          <div id="logo"></div>
           <h1>Petty</h1>
         </div>
         <div id="nav-wrap">
@@ -56,7 +60,9 @@
             <div id="btn-container">
               <button>
                 <h3>Our services</h3>
-                <img src="icons/arrow.svg" alt="arrow icon" />
+                <div id="arrow">
+                  <img src="icons/arrow.svg" alt="arrow icon" />
+                </div>
               </button>
               <a href="#">Schedule a call</a>
             </div>
