--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h5>Shop</h5>
           </div>
           <div id="nav-wrap-right">
-            <h5>Constact us</h5>
+            <h5>Contact us</h5>
             <div id="logo-3">
               <img src="logos/logo3.svg" alt="" />
             </div>
