--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="main-container">
+      <div id="logo2"></div>
       <div id="dogo1"></div>
       <div id="dogo2"></div>
       <div id="dogo3"></div>
@@ -24,7 +25,7 @@
         </div>
         <div id="nav-wrap">
           <div id="nav-wrap-left">
-            <h5><img src="logos/logo2.svg" alt="" /> <span>Home</span></h5>
+            <h5><span>Home</span></h5>
             <h5>About</h5>
             <h5>Services</h5>
             <h5>Training</h5>
